--- a/Creative_package/Content_Request_Report_SMS.ipynb
+++ b/Creative_package/Content_Request_Report_SMS.ipynb
@@ -92,7 +92,7 @@
     }
    ],
    "source": [
-    "lexi_original = pd.read_csv(filepath.input_folder + 'SS_LC_merged_data.csv')\n",
+    "lexi_original = infrastructure.get_lexi()\n",
     "lexi = lexi_original.copy()\n",
     "lexi = infrastructure.transform_sms_df(lexi)\n",
     "lexi = lexi[lexi['Delivered'] > 0]\n",
