--- a/Creative_package/TF_Content_Request_Report_SMS.ipynb
+++ b/Creative_package/TF_Content_Request_Report_SMS.ipynb
@@ -72,7 +72,7 @@
     }
    ],
    "source": [
-    "lexi_original = pd.read_csv(filepath.output_folder + 'SS_LC_merged_data.csv')\n",
+    "lexi_original = infrastructure.get_lexi()\n",
     "lexi = lexi_original.copy()\n",
     "lexi = lexi[lexi['Delivered']>0]\n",
     "lexi = infrastructure.transform_sms_df(lexi)\n",
